--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,18 @@
 server.port=8080
 server.servlet.context-path=/book
 
+# DataSourceProperties
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/book?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.maximum-pool-size=15
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+
+# MybatisProperties
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.laofuzi.book.entity
+mybatis.configuration.useGeneratedKeys=true
+mybatis.configuration.mapUnderscoreToCamelCase=true
