--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 			<version>1.16.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.62</version>
+		</dependency>
+
 	</dependencies>
 
 
