--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 server.port=8080
 server.servlet.context-path=/laofuzi
 
+# ThymeleafProperties
+spring.thymeleaf.cache=false
+
 # DataSourceProperties
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/laofuzi?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/book?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
 spring.datasource.username=root
-spring.datasource.password=sql2008
+spring.datasource.password=root
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
