--- a/pom.xml
+++ b/pom.xml
@@ -97,18 +97,7 @@
 			<version>4.0.0-alpha-5</version>
 		</dependency>
 
-		<!--PDF转化工具-->
-		<dependency>
-			<groupId>com.itextpdf</groupId>
-			<artifactId>itextpdf</artifactId>
-			<version>5.4.2</version>
-		</dependency>
 
-		<dependency>
-			<groupId>org.xhtmlrenderer</groupId>
-			<artifactId>core-renderer</artifactId>
-			<version>R8</version>
-		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
 		<dependency>
@@ -116,7 +105,39 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/html2pdf -->
+		<dependency>
+			       <groupId>com.itextpdf</groupId>
+			       <artifactId>itext7-core</artifactId>
+			       <version>7.1.11</version>
+			   <type>pom</type>
+		</dependency>
 
+		<dependency>
+			       <groupId>com.itextpdf</groupId>
+			        <artifactId>html2pdf</artifactId>
+			        <version>2.0.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/layout -->
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>layout</artifactId>
+			<version>7.1.3</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>5.4.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.itextpdf.tool</groupId>
+			<artifactId>xmlworker</artifactId>
+			<version>5.4.1</version>
+		</dependency>
 
     </dependencies>
 
@@ -151,6 +172,7 @@
 						<version>1.3.2</version>
 					</dependency>
 				</dependencies>
+
 			</plugin>
 		</plugins>
 	</build>
